--- a/src/docs/asciidoc/angular.adoc
+++ b/src/docs/asciidoc/angular.adoc
@@ -158,7 +158,7 @@ Usage:
 [source]
 <app-cockpit (serverCreated)="onServerAdded($event)">
 
-==== View encapsulation
+=== View encapsulation
 
 [source,typescript]
 @Component({
@@ -172,7 +172,7 @@ Usage:
 `ViewEncapsulation.Native` uses shadow-DOM technology (not supported by older browsers).
 
 
-==== Using local references:
+=== Using local references:
 
 [source]
 ----
@@ -525,7 +525,7 @@ this.router.navigate(
 [source,typscript]
 {path: '', component: HomeComponent, pathMatch: 'full'}
 
-==== Routing in separate module:
+=== Routing in separate module:
 
 [source,typscript]
 ----
@@ -542,7 +542,7 @@ export class AppRoutingModule {
 }
 ----
 
-==== Activating children
+=== Activating children
 
 .In AuthGuard class:
 [source]
@@ -691,7 +691,7 @@ Always make sure to unsubscribe:
 .Rx.js website:
 http://reactivex.io/
 
-==== Subjects
+=== Subjects
 
  userActivated = new Subject();
 
