--- a/src/docs/asciidoc/groovy.adoc
+++ b/src/docs/asciidoc/groovy.adoc
@@ -1,4 +1,9 @@
 = Groovy
+:doc-root: https://jdata.pl/notes
+:toc: left
+:toclevels: 4
+:tabsize: 4
+:docinfo1:
 
 [source,groovy]
 print "cmd /C dir".execute().text
